<resources>
    <string name="app_name">TopQuiz</string>
    <string name="main_greeting_txt_generic">Hi!  Enjoy the quiz!</string>
    <string name="welcome_back_user">Welcome back %1$s! Your previous score was: %2$d </string>
    <string name="try_again_txt">"Let's play again %1$s!"</string>
    <string name="leaders_by_name">Rank by name</string>
    <string name="leaders_by_score">Rank by score</string>
    <string name="tv_leader_board_title">Leaderboard</string>
    <string name="name_prompt">Please type your name</string>
    <string name="play_btn">"Let's get started!"</string>
    <string name="tv_show_leaderboard">
                        " "
                        %1$s %2$s"\n"
                        %3$s %4$s"\n"
                        %5$s %6$s"\n"
                        %7$s %8$s"\n"
                        %9$s %10$s
    </string>
    <string name="home">Home</string>
    <string name="greeting_generic">Hi! Enjoy the quiz!</string>

</resources>
