<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    tools:context="com.fanikiosoftware.topquiz.controller.MainActivity">

    <TextView
        android:id="@+id/activity_main_greeting_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="40dp"
        android:padding="10dp"
        android:text="@string/greeting_generic"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp"
        android:textStyle="bold"
        android:typeface="normal" />

    <EditText
        android:id="@+id/activity_main_name_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10sp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="10sp"
        android:hint="@string/name_prompt"
        android:inputType="text"
        android:padding="20dp" />

    <Button
        android:id="@+id/activity_main_play_btn"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="bottom"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="5dp"
        android:layout_weight="1"
        android:background="@android:color/white"
        android:text="@string/play_btn"
        android:textColor="@color/colorAccent"
        android:textSize="20sp" />

    <Button
        android:id="@+id/activity_main_leader_board_btn"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="bottom"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="5dp"
        android:layout_weight="1"
        android:background="@android:color/white"
        android:text="@string/tv_leader_board_title"
        android:textColor="@color/colorAccent"
        android:textSize="20sp" />
</LinearLayout>
