<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_leader_board"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:lineSpacingExtra="10sp"
        android:padding="20dp"
        android:text="@string/tv_leader_board_title"
        android:textAllCaps="true"
        android:textColor="@color/colorAccent"
        android:textSize="18sp"
        android:textStyle="bold"
        android:typeface="normal" />

    <TextView
        android:id="@+id/tv_leader1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginLeft="150dp"
        android:layout_marginTop="60dp"
        android:padding="1dp"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20sp"
        android:textStyle="bold"
        android:typeface="normal" />

    <TextView
        android:id="@+id/tv_leader2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginLeft="150dp"
        android:layout_marginTop="15dp"
        android:padding="1dp"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20sp"
        android:textStyle="bold"
        android:typeface="normal" />

    <TextView
        android:id="@+id/tv_leader3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginLeft="150dp"
        android:layout_marginTop="15dp"
        android:padding="1dp"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20sp"
        android:textStyle="bold"
        android:typeface="normal" />

    <TextView
        android:id="@+id/tv_leader4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginLeft="150dp"
        android:layout_marginTop="15dp"
        android:padding="1dp"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20sp"
        android:textStyle="bold"
        android:typeface="normal" />

    <TextView
        android:id="@+id/tv_leader5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginLeft="150dp"
        android:layout_marginTop="15dp"
        android:padding="1dp"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20sp"
        android:textStyle="bold"
        android:typeface="normal" />

    <Button
        android:id="@+id/btn_rank_by_name"
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:layout_gravity="bottom"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="5dp"
        android:layout_weight="1"
        android:background="@android:color/white"
        android:text="@string/leaders_by_name"
        android:textColor="@color/colorAccent"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btn_rank_by_score"
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:layout_gravity="bottom"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="5dp"
        android:layout_weight="1"
        android:background="@android:color/white"
        android:text="@string/leaders_by_score"
        android:textColor="@color/colorAccent"
        android:textSize="20sp" />
</LinearLayout>
